# KTANE_Arduino

./: Electronic_Components_List.xls  PRODUCT.md  README.md  box.dxf  box.pdsprj  schematic.pdsprj
ESP32/: ESP32.ino  Hardware.h  ssid_conf.h
ESP32-2432S028R_libs/: lv_conf.h
ESP32/src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_HelpScreen.c  ui_HelpScreen.h  ui_Information.c  ui_Information.h  ui_LoadScreen.c  ui_LoadScreen.h  ui_Login.c  ui_Login.h  ui_Main.c  ui_Main.h  ui_Main1.c  ui_Main1.h  ui_ModuleSelect.c  ui_ModuleSelect.h  ui_OrderPlay.c  ui_OrderPlay.h  ui_Result.c  ui_Result.h  ui_Score.c  ui_Score.h  ui_Screen1.c  ui_Setting.c  ui_Setting.h  ui_TimerSelect.c  ui_TimerSelect.h  ui_TimerSetting.c  ui_TimerSetting.h  ui_events.cpp  ui_events.h  ui_font_Digit.c  ui_font_Digit_45.c  ui_font_XFail.c  ui_font_digit.c  ui_font_fontLCD.c  ui_helpers.c  ui_helpers.h  (+94 more)
Library_ESP32-2432S028R/: lv_conf.h
MazeList_Generator/: MazeList.xlsx  generator.py
Project/: Button_Project.sll  Button_Project.spj  Button_Project_events.py  ComplicatedWires_Project.sll  ComplicatedWires_Project.spj  ComplicatedWires_Project_events.py  Host_Timer_Project.sll  Host_Timer_Project.spj  Host_Timer_Project_events.py  Keypads_Project_events.py  Mazes_Project.sll  Mazes_Project.spj  Mazes_Project_events.py  Memory_Project.sll  Memory_Project.spj  Memory_Project_events.py  MorseCode_Project.sll  MorseCode_Project.spj  MorseCode_Project_events.py  NeedyCapacitorDischarge_Project.sll  NeedyCapacitorDischarge_Project.spj  NeedyCapacitorDischarge_Project_events.py  NeedyKnobs_Project.sll  NeedyKnobs_Project.spj  NeedyKnobs_Project_events.py  NeedyVentingGas_Project.sll  NeedyVentingGas_Project.spj  NeedyVentingGas_Project_events.py  Passwords_Project.sll  Passwords_Project.spj  Passwords_Project_events.py  SimonSays_Project.sll  SimonSays_Project.spj  SimonSays_Project_events.py  SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py  SystemInfo_Project.sll  SystemInfo_Project.spj  SystemInfo_Project_events.py  (+8 more)
Simulator/: LVGL.sln
(+38 files in other folders)
